Add 6 new gadget chains: CC14, CC15, Jackson1/2, Jdk8u20, C3P02
New payloads (73 total):
- CC14 (@zema1): HashSet+TiedMapEntry+InstantiateTransformer — InvokerTransformer filter bypass
- CC15 (@zema1, @BofeiC): LinkedHashSet+InstantiateTransformer — double evasion (root+sink)
- Jackson1 (@Y4tacker, @mbechler): POJONode.toString() → TemplatesImpl via jackson-databind
- Jackson2 (@Y4tacker, @mbechler): POJONode.toString() → JdbcRowSetImpl JNDI (JDK17+ friendly)
- Jdk8u20 (@pwntester, @mwulftange): JDK-only chain bypassing 7u25 AIH fix
- C3P02 (@mbechler): C3P0 hex-encoded nested deserialization wrapper

Added jackson-databind 2.12.7.1 dependency.
Updated README with comprehensive payload catalog and usage examples.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>